--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,7 +9,9 @@ ul,ol{list-style: none;}
 
 body{width: 100%;height: 100vh;overflow: hidden;}
 
-.page{width: 70%;height: 100vh;overflow: auto;margin:0 auto;margin-top: 40px;border: 1px solid #000;}
+.page{width: 100%;height: 100vh;overflow: auto;margin:0 auto;margin-top: 40px;border: 1px solid #000;}
+
+.page>.resume{width: 70%;margin: 0 auto;border: 1px solid red;text-align: center;}
 .btns{position: fixed;top: 0;height: 0;width: 100%;padding: 8px 20px;border: 1px solid rebeccapurple;text-align: center;
     height: 40px;}
 .btns>button{margin: 0 8px;position: relative;}
