--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,7 +11,7 @@ body{width: 100%;height: 100vh;overflow: hidden;}
 
 .page{width: 100%;height: 100vh;overflow: auto;margin:0 auto;margin-top: 40px;border: 1px solid #000;}
 
-.page>.resume{width: 70%;margin: 0 auto;border: 1px solid red;text-align: center;}
+.page>.resume{width: 70%;margin: 0 auto;border: 1px solid red;text-align: center;overflow: auto;padding-bottom: 60px;}
 .btns{position: fixed;top: 0;height: 0;width: 100%;padding: 8px 20px;border: 1px solid rebeccapurple;text-align: center;
     height: 40px;}
 .btns>button{margin: 0 8px;position: relative;}
@@ -24,10 +24,10 @@ section>h1{margin-top: 20px;text-align: center;font-weight: 400;width: 100%}
 .skill{}
 
 .skillWrap{width: 100%;display: flex;flex-wrap: wrap;justify-content: space-around;}
-.skillWrap>li{width: 40%;margin-top: 20px;padding: 8px 12px;}
+.skillWrap>li{width: 40%;margin-top: 20px;padding: 8px 12px;border: 1px solid #ddd}
 
 
 
 .projects{}
 .projectWrap{width: 100%;}
-.projectWrap>li{margin-top: 16px;padding: 8px 40px;width: 100%;text-align: center}
+.projectWrap>li{margin-top: 16px;padding: 8px 40px;width: 100%;text-align: center;border: 1px solid #ddd}
