--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,7 +9,7 @@ ul,ol{list-style: none;}
 
 body{width: 100%;height: 100vh;overflow: hidden;}
 
-.page{width: 100%;height: 100vh;overflow: auto;margin:0 auto;margin-top: 40px;border: 1px solid #000;}
+.page{width: 100%;height: 100vh;overflow: auto;margin:0 auto;margin-top: 40px;}
 
 .page>.resume{width: 70%;margin: 0 auto;border: 1px solid red;text-align: center;overflow: auto;padding-bottom: 60px;}
 .btns{position: fixed;top: 0;height: 0;width: 100%;padding: 8px 20px;border: 1px solid rebeccapurple;text-align: center;
@@ -31,3 +31,8 @@ section>h1{margin-top: 20px;text-align: center;font-weight: 400;width: 100%}
 .projects{}
 .projectWrap{width: 100%;}
 .projectWrap>li{margin-top: 16px;padding: 8px 40px;width: 100%;text-align: center;border: 1px solid #ddd}
+
+
+
+
+.quitPreview{position: fixed;top: 20px;left: 20px;}
